--- a/Assignments/Assignment # 1 __Sana Ullah Khan_ DSML 12.ipynb
+++ b/Assignments/Assignment # 1 __Sana Ullah Khan_ DSML 12.ipynb
@@ -35,7 +35,7 @@
     }
    ],
    "source": [
-    "#write code here\n",
+    "#for record, when i wrote this notebook.!\n",
     "from datetime import date\n",
     "\n",
     "today = date.today()\n",
@@ -208,38 +208,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter an integer: 51\n",
-      "Enterted number is greater than 50\n"
+      "Enter a number: -1\n",
+      "Entered number is less than 50\n",
+      "\n",
+      "Enter a number: 0\n",
+      "Entered number is less than 50\n",
+      "\n",
+      "Enter a number: 49.9999\n",
+      "Entered number is less than 50\n",
+      "\n",
+      "Enter a number: 50\n",
+      "Entered number is equal to 50\n",
+      "\n",
+      "Enter a number: 50.00001\n",
+      "Enterted number is greater than 50\n",
+      "\n",
+      "Enter a number: 51\n",
+      "Enterted number is greater than 50\n",
+      "\n",
+      "Enter a number: python\n",
+      "'python' is an invalid input [exit/Exit or number]\n",
+      "\n",
+      "Enter a number: exit\n",
+      "Good Bye!\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# write code here\n",
+    "#to detect int or float we need ast library\n",
+    "import ast \n",
     "\n",
-    "# Try to check if input numebr is an integer, except and ptint warning/error message if its not int. \n",
-    "try:\n",
-    "    num =int(input('Enter an integer: '))\n",
-    "\n",
-    "    while num==num: # num==True wont be true if num == 0... so num==num is always true!\n",
-    "\n",
-    "        if num == 50:\n",
-    "            print(\"Entered number is equal to 50\")\n",
-    "        elif num > 50:\n",
-    "            print('Enterted number is greater than 50')\n",
-    "        else:\n",
-    "            print('Entered number is less than 50')\n",
-    "            \n",
-    "        break #Loop will run only once.\n",
-    "\n",
-    "except:\n",
-    "    print(\"Input type is not integer\")\n"
+    "while True:\n",
+    "    num =input('Enter a number: ')\n",
+    "    \n",
+    "    #Try for valid input {any number or 'exit/Exit/EXIT..'}\n",
+    "    try:\n",
+    "        if num.lower() =='exit':\n",
+    "            print(f'Good Bye!\\n')\n",
+    "            break\n",
+    "        elif ast.literal_eval(num) == 50:\n",
+    "                print(\"Entered number is equal to 50\\n\")\n",
+    "        elif ast.literal_eval(num) > 50:\n",
+    "            print('Enterted number is greater than 50\\n')\n",
+    "        elif ast.literal_eval(num) < 50:\n",
+    "            print('Entered number is less than 50\\n')\n",
+    "    \n",
+    "    # except if input is neither a number nor an 'exit'.\n",
+    "    except:\n",
+    "        print(f\"'{num}' is an invalid input [exit/Exit or number]\\n\")"
    ]
   },
   {
