--- a/Week 03/EDA SEABORN-Titanic_data.ipynb
+++ b/Week 03/EDA SEABORN-Titanic_data.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -186,163 +186,127 @@
        "      <th>Parch</th>\n",
        "      <th>Ticket</th>\n",
        "      <th>Fare</th>\n",
+       "      <th>Cabin</th>\n",
        "      <th>Embarked</th>\n",
-       "      <th>Title</th>\n",
-       "      <th>Fsize</th>\n",
-       "      <th>Tsize</th>\n",
-       "      <th>Group</th>\n",
-       "      <th>GrpSize</th>\n",
-       "      <th>FareCat</th>\n",
-       "      <th>AgeCat</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>379</td>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>Betros, Mr. Tannous</td>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
        "      <td>male</td>\n",
-       "      <td>20.00</td>\n",
+       "      <td>22.00</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>A/5 21171</td>\n",
+       "      <td>7.25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>female</td>\n",
+       "      <td>38.00</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>2648</td>\n",
-       "      <td>4.01</td>\n",
+       "      <td>PC 17599</td>\n",
+       "      <td>71.28</td>\n",
+       "      <td>C85</td>\n",
        "      <td>C</td>\n",
-       "      <td>Mr</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>solo</td>\n",
-       "      <td>0-10</td>\n",
-       "      <td>16-32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>418</th>\n",
-       "      <td>873</td>\n",
-       "      <td>0</td>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>Carlsson, Mr. Frans Olof</td>\n",
-       "      <td>male</td>\n",
-       "      <td>33.00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>female</td>\n",
+       "      <td>26.00</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>695</td>\n",
-       "      <td>5.00</td>\n",
+       "      <td>STON/O2. 3101282</td>\n",
+       "      <td>7.92</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>S</td>\n",
-       "      <td>Mr</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>solo</td>\n",
-       "      <td>0-10</td>\n",
-       "      <td>32-48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>163</th>\n",
-       "      <td>327</td>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>35.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113803</td>\n",
+       "      <td>53.10</td>\n",
+       "      <td>C123</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>Nysveen, Mr. Johan Hansen</td>\n",
+       "      <td>Allen, Mr. William Henry</td>\n",
        "      <td>male</td>\n",
-       "      <td>61.00</td>\n",
+       "      <td>35.00</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>345364</td>\n",
-       "      <td>6.24</td>\n",
+       "      <td>373450</td>\n",
+       "      <td>8.05</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>S</td>\n",
-       "      <td>Mr</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>solo</td>\n",
-       "      <td>0-10</td>\n",
-       "      <td>48-64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>435</th>\n",
-       "      <td>844</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Lemberopolous, Mr. Peter L</td>\n",
-       "      <td>male</td>\n",
-       "      <td>34.50</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2683</td>\n",
-       "      <td>6.44</td>\n",
-       "      <td>C</td>\n",
-       "      <td>Mr</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>solo</td>\n",
-       "      <td>0-10</td>\n",
-       "      <td>32-48</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>379</th>\n",
-       "      <td>819</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Holm, Mr. John Fredrik Alexander</td>\n",
-       "      <td>male</td>\n",
-       "      <td>43.00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>C 7075</td>\n",
-       "      <td>6.45</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Mr</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>solo</td>\n",
-       "      <td>0-10</td>\n",
-       "      <td>32-48</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     PassengerId  Survived  Pclass                              Name   Sex  \\\n",
-       "24           379         0       3               Betros, Mr. Tannous  male   \n",
-       "418          873         0       1          Carlsson, Mr. Frans Olof  male   \n",
-       "163          327         0       3         Nysveen, Mr. Johan Hansen  male   \n",
-       "435          844         0       3        Lemberopolous, Mr. Peter L  male   \n",
-       "379          819         0       3  Holm, Mr. John Fredrik Alexander  male   \n",
+       "   PassengerId  Survived  Pclass  \\\n",
+       "0            1         0       3   \n",
+       "1            2         1       1   \n",
+       "2            3         1       3   \n",
+       "3            4         1       1   \n",
+       "4            5         0       3   \n",
        "\n",
-       "      Age  SibSp  Parch  Ticket  Fare Embarked Title  Fsize  Tsize  Group  \\\n",
-       "24  20.00      0      0    2648  4.01        C    Mr      1      1      1   \n",
-       "418 33.00      0      0     695  5.00        S    Mr      1      1      1   \n",
-       "163 61.00      0      0  345364  6.24        S    Mr      1      1      1   \n",
-       "435 34.50      0      0    2683  6.44        C    Mr      1      1      1   \n",
-       "379 43.00      0      0  C 7075  6.45        S    Mr      1      1      1   \n",
+       "                                                Name     Sex   Age  SibSp  \\\n",
+       "0                            Braund, Mr. Owen Harris    male 22.00      1   \n",
+       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female 38.00      1   \n",
+       "2                             Heikkinen, Miss. Laina  female 26.00      0   \n",
+       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female 35.00      1   \n",
+       "4                           Allen, Mr. William Henry    male 35.00      0   \n",
        "\n",
-       "    GrpSize FareCat AgeCat  \n",
-       "24     solo    0-10  16-32  \n",
-       "418    solo    0-10  32-48  \n",
-       "163    solo    0-10  48-64  \n",
-       "435    solo    0-10  32-48  \n",
-       "379    solo    0-10  32-48  "
+       "   Parch            Ticket  Fare Cabin Embarked  \n",
+       "0      0         A/5 21171  7.25   NaN        S  \n",
+       "1      0          PC 17599 71.28   C85        C  \n",
+       "2      0  STON/O2. 3101282  7.92   NaN        S  \n",
+       "3      0            113803 53.10  C123        S  \n",
+       "4      0            373450  8.05   NaN        S  "
       ]
      },
-     "execution_count": 133,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data = pd.read_csv('data/titanic_data.csv')\n",
-    "dftitanic = data.copy()\n",
+    "df = data.copy()\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +345,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +487,7 @@
        "max         891.00      1.00    3.00  80.00   8.00   6.00 512.33"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +575,7 @@
        "freq                          1   577       7        4      644"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +608,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +648,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1065,7 +1029,7 @@
        "4      0            373450  8.05   NaN        S    Mr  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1123,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1132,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {
     "scrolled": false
    },
