--- a/Week 07/Hierarchical Clustering/Hierarchical Clustering Lab.ipynb
+++ b/Week 07/Hierarchical Clustering/Hierarchical Clustering Lab.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "4     2  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,11 +186,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = df.set_index('model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cyl</th>\n",
+       "      <th>disp</th>\n",
+       "      <th>hp</th>\n",
+       "      <th>drat</th>\n",
+       "      <th>wt</th>\n",
+       "      <th>qsec</th>\n",
+       "      <th>vs</th>\n",
+       "      <th>am</th>\n",
+       "      <th>gear</th>\n",
+       "      <th>carb</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>model</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Mazda RX4</th>\n",
+       "      <td>21.00</td>\n",
+       "      <td>6</td>\n",
+       "      <td>160.00</td>\n",
+       "      <td>110</td>\n",
+       "      <td>3.90</td>\n",
+       "      <td>2.62</td>\n",
+       "      <td>16.46</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mazda RX4 Wag</th>\n",
+       "      <td>21.00</td>\n",
+       "      <td>6</td>\n",
+       "      <td>160.00</td>\n",
+       "      <td>110</td>\n",
+       "      <td>3.90</td>\n",
+       "      <td>2.88</td>\n",
+       "      <td>17.02</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Datsun 710</th>\n",
+       "      <td>22.80</td>\n",
+       "      <td>4</td>\n",
+       "      <td>108.00</td>\n",
+       "      <td>93</td>\n",
+       "      <td>3.85</td>\n",
+       "      <td>2.32</td>\n",
+       "      <td>18.61</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hornet 4 Drive</th>\n",
+       "      <td>21.40</td>\n",
+       "      <td>6</td>\n",
+       "      <td>258.00</td>\n",
+       "      <td>110</td>\n",
+       "      <td>3.08</td>\n",
+       "      <td>3.21</td>\n",
+       "      <td>19.44</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hornet Sportabout</th>\n",
+       "      <td>18.70</td>\n",
+       "      <td>8</td>\n",
+       "      <td>360.00</td>\n",
+       "      <td>175</td>\n",
+       "      <td>3.15</td>\n",
+       "      <td>3.44</td>\n",
+       "      <td>17.02</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    mpg  cyl   disp   hp  drat   wt  qsec  vs  am  gear  carb\n",
+       "model                                                                        \n",
+       "Mazda RX4         21.00    6 160.00  110  3.90 2.62 16.46   0   1     4     4\n",
+       "Mazda RX4 Wag     21.00    6 160.00  110  3.90 2.88 17.02   0   1     4     4\n",
+       "Datsun 710        22.80    4 108.00   93  3.85 2.32 18.61   1   1     4     1\n",
+       "Hornet 4 Drive    21.40    6 258.00  110  3.08 3.21 19.44   1   0     3     1\n",
+       "Hornet Sportabout 18.70    8 360.00  175  3.15 3.44 17.02   0   0     3     2"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   },
   {
@@ -252,16 +399,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.rename_axis(None)"
+    "df =df.rename_axis(None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +529,7 @@
        "Hornet Sportabout 18.70    8 360.00  175  3.15 3.44 17.02   0   0     3     2"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
